--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,3 +1,5 @@
 <resources>
     <dimen name="fab_margin">16dp</dimen>
+    <dimen name="header_size">16dp</dimen>
+    <dimen name="header_margin_left">10dp</dimen>
 </resources>
